--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <div class="tit-name"> <span>正在播放:</span>
       <h1 id="tittext"> </h1>
     </div>
-    <iframe id="palybox" src="https://jx.xmflv.com/?url=" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="true" allowtransparency="true">
-    </iframe>
+ <iframe id="palybox" src="about:blank" style="background:#000;" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="true"></iframe>
     <div class="url-box">
       <div class="input-group">
         <input type="text" id="url" class="form-control url-text" aria-label="Text input with segmented button dropdown" placeholder="请粘贴视频网址>ㅂ<ﾉ ☆" title="请复制你想要看的视频网址，粘贴到此处点击播放即可！">
@@ -174,13 +173,6 @@ head.appendChild(script);
       </div>
     </div>
   </div>
-</div>
-    </div>
-  </div>
-    <div class="wysj-serv-box">
-    </div>
-  </div>
-  <div class="wysj-icon-item"> <a href="javascript:;" onclick="backTop()" class="wysj wysj-dingbu1 wysj-icon-link"> <span class="wysj-icon-title">回到顶部</span> </a> </div>
 </div>
 </footer>
 <script>function backTop(){jQuery('html,body').stop(false,true).animate({scrollTop:0},600)}</script> 
