--- a/index.html
+++ b/index.html
@@ -16,6 +16,74 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script src="js/jquery.min.js"></script> 
+  <!-- ✅ 移动端美颜（放最后，覆盖前面） -->
+<style>
+/* 1. 头部背景 */
+.header,
+.navbar-fixed-top {
+    background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+}
+
+/* 2. 标题炫彩 */
+.cinema-title h1 {
+    background: linear-gradient(90deg, #ff8a00, #e52e71);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: glow 3s ease-in-out infinite;
+}
+@keyframes glow {
+    50% { filter: brightness(1.3) drop-shadow(0 0 15px rgba(255,138,0,.6)); }
+}
+
+/* 3. 副标题高亮 */
+.cinema-title .subtitle { color: #ffd26f; text-shadow: 0 0 8px rgba(255,210,111,.5); }
+
+/* 4. 手机端输入栏玻璃圆角 */
+@media (max-width: 767px) {
+    .url-box {
+        margin: 15px 10px;
+        background: rgba(255,255,255,.15);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255,255,255,.25);
+        border-radius: 50px;
+        padding: 8px;
+        box-shadow: 0 10px 30px rgba(0,0,0,.4);
+    }
+    .form-control.url-text,
+    #url {
+        background: transparent;
+        border: none;
+        outline: none;
+        color: #fff;
+        font-size: 1rem;
+        padding: 8px 15px;
+    }
+    ::placeholder { color: #ddd; }
+
+    /* 5. 手机按钮炫彩 */
+    .btn-play,
+    .play-btn {
+        background: linear-gradient(45deg, #ff8a00, #e52e71);
+        border: none;
+        border-radius: 50px;
+        padding: 10px 20px;
+        color: #fff;
+        font-weight: bold;
+        box-shadow: 0 5px 20px rgba(229,9,20,.5);
+        transition: all .3s;
+    }
+    .btn-play:active,
+    .play-btn:active { transform: scale(0.95); }
+
+    /* 6. 手机播放器圆角阴影 */
+    .player-card {
+        border-radius: 20px;
+        overflow: hidden;
+        box-shadow: 0 15px 40px rgba(0,0,0,.6);
+        margin: 15px 10px;
+    }
+}
+</style>
 <script src="js/bootstrap.min.js"></script> 
 <script src="js/base64.min.js"></script> 
 <script src="js/video.js"></script>
