--- a/index.html
+++ b/index.html
@@ -121,15 +121,10 @@
           <select class="url-c url-text" title="如发现视频无法正常播放请尝试更换视频线路！" id="jk">
           <option value="https://jx.2s0.cn/player/?url=">默认解析端口①</option>
           <option value="https://jx.xmflv.cc/?url=">VIP视频解析②</option>
-          <option value="https://jx.nnxv.cn/tv.php?url=">VIP视频解析③</option>
-          <option value="https://jx.77flv.cc/?url=">VIP视频解析④</option>
-          <option value="https://jx.playerjy.com/?url=">VIP视频解析⑤</option>
-          <option value="https://z1.im1907.top/?jx=">VIP视频解析⑥</option>
-          <option value="https://jx.xymp4.cc/?url=">VIP视频解析⑦</option>
-          <option value="https://api.quanminjiexi.com/index.php?url=">VIP视频解析⑧</option>
-          <option value="http://v9j.net/?url=">VIP视频解析⑨</option>
-          <option value="//video.isyour.love/player/getplayer?url=">VIP视频解析⑩</option>
-          <option value="//jx.m3u8.tv/jiexi/?url=">vip会员视频解析</option>
+          <option value="https://jx.77flv.cc/?url=">VIP视频解析③</option>
+          <option value="https://jx.xymp4.cc/?url=">VIP视频解析④</option>
+          <option value="https://api.quanminjiexi.com/index.php?url=">VIP视频解析⑤</option>
+          <option value="http://v9j.net/?url=">VIP视频解析⑥</option>
           </select>
         </div>
         <div class="input-group-btn">
