--- a/index.html
+++ b/index.html
@@ -18,71 +18,35 @@
 <script src="js/jquery.min.js"></script> 
   <!-- ✅ 移动端美颜（放最后，覆盖前面） -->
 <style>
-/* 1. 头部背景 */
-.header,
-.navbar-fixed-top {
-    background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-}
-
-/* 2. 标题炫彩 */
-.cinema-title h1 {
-    background: linear-gradient(90deg, #ff8a00, #e52e71);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: glow 3s ease-in-out infinite;
-}
-@keyframes glow {
-    50% { filter: brightness(1.3) drop-shadow(0 0 15px rgba(255,138,0,.6)); }
-}
-
-/* 3. 副标题高亮 */
-.cinema-title .subtitle { color: #ffd26f; text-shadow: 0 0 8px rgba(255,210,111,.5); }
-
-/* 4. 手机端输入栏玻璃圆角 */
+/* ✅ 移动端奈飞视觉（只调色，不改布局） */
 @media (max-width: 767px) {
+    /* 1. 输入栏：玻璃→深黑玻璃，边框暗红 */
     .url-box {
-        margin: 15px 10px;
-        background: rgba(255,255,255,.15);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255,255,255,.25);
-        border-radius: 50px;
-        padding: 8px;
-        box-shadow: 0 10px 30px rgba(0,0,0,.4);
+        background: rgba(10, 10, 10, .75);   /* Netflix 深黑 */
+        border: 1px solid rgba(229, 9, 20, .35); /* Netflix 暗红 */
+        box-shadow: 0 10px 30px rgba(229, 9, 20, .25);
     }
     .form-control.url-text,
     #url {
-        background: transparent;
-        border: none;
-        outline: none;
-        color: #fff;
-        font-size: 1rem;
-        padding: 8px 15px;
+        color: #e5e5e5;                     /* 浅灰文字 */
     }
-    ::placeholder { color: #ddd; }
+    ::placeholder { color: #b3b3b3; }
 
-    /* 5. 手机按钮炫彩 */
+    /* 2. 按钮：Netflix 暗红渐变 */
     .btn-play,
     .play-btn {
-        background: linear-gradient(45deg, #ff8a00, #e52e71);
-        border: none;
-        border-radius: 50px;
-        padding: 10px 20px;
-        color: #fff;
-        font-weight: bold;
-        box-shadow: 0 5px 20px rgba(229,9,20,.5);
-        transition: all .3s;
+        background: linear-gradient(45deg, #e50914, #b20710);
+        box-shadow: 0 5px 20px rgba(229, 9, 20, .55);
     }
     .btn-play:active,
     .play-btn:active { transform: scale(0.95); }
 
-    /* 6. 手机播放器圆角阴影 */
+    /* 3. 播放器卡片：深黑阴影 */
     .player-card {
-        border-radius: 20px;
-        overflow: hidden;
-        box-shadow: 0 15px 40px rgba(0,0,0,.6);
-        margin: 15px 10px;
+        box-shadow: 0 15px 40px rgba(0, 0, 0, .75);
     }
 }
+
 </style>
 <script src="js/bootstrap.min.js"></script> 
 <script src="js/base64.min.js"></script> 
