--- a/index.html
+++ b/index.html
@@ -16,130 +16,102 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script src="js/jquery.min.js"></script> 
-  <<!-- ✅ Netflix 全局强制视觉（只调色，不改布局） -->
+  <!-- ✅ 奈飞·极致酷炫（强制覆盖版） -->
 <style>
-/* ---------- 1. 通用变量 ---------- */
-:root{
-  --netflix-bg:#141414;
-  --netflix-bg-light:#181818;
-  --netflix-red:#e50914;
-  --netflix-red-dark:#b20710;
-  --netflix-text:#e5e5e5;
-  --netflix-text-dark:#b3b3b3;
-}
-
-/* ---------- 2. 背景与导航栏 ---------- */
-body{
-  background:var(--netflix-bg)!important;
-}
+/* ---------- 0. 导航隐形 ---------- */
 header.navbar-fixed-top,
-.header,
-.navbar-default{
-  background: rgba(20,20,20,.95)!important;
-  border-bottom:1px solid var(--netflix-red-dark)!important;
-}
+.navbar-default,
+.navbar-header,
 .navbar-brand,
-.navbar-nav>li>a{
-  color:var(--netflix-text)!important;
-  font-weight:700!important;
-}
-.navbar-nav>li>a:hover{
-  color:var(--netflix-red)!important;
+.navbar-nav,
+.navbar-toggle{
+  background:0 0!important;
+  border:none!important;
+  box-shadow:none!important;
+  height:0!important;
+  margin:0!important;
+  padding:0!important;
+  overflow:hidden!important;
 }
 
-/* ---------- 3. 播放器区域 ---------- */
-.video-box{
-  background:var(--netflix-bg-light)!important;
+/* ---------- 1. 播放器四周深黑渐变背景 ---------- */
+body{
+  background:#0e0e0e!important;
+  background:linear-gradient(135deg,#0e0e0e 40%,#1a1a1a 100%)!important;
 }
+.video-box{
+  background:transparent!important;
+  padding-top:20px!important;
+}
+
+/* ---------- 2. 播放器本身：带红色霓虹 ---------- */
 #palybox{
   background:#000!important;
   border:1px solid var(--netflix-red-dark)!important;
-  box-shadow:0 0 20px rgba(229,9,20,.35)!important;
+  border-radius:8px!important;
+  box-shadow:
+    0 0 20px rgba(229,9,20,.45),
+    0 0 40px rgba(229,9,20,.25)!important;
+  transition:box-shadow .4s ease;
+}
+#palybox:hover{
+  box-shadow:
+    0 0 30px rgba(229,9,20,.65),
+    0 0 60px rgba(229,9,20,.35)!important;
 }
 
-/* ---------- 4. 输入框 ---------- */
+/* ---------- 3. 输入区毛玻璃 + 霓虹边 ---------- */
 .url-box{
-  background:rgba(24,24,24,.75)!important;
-  border:1px solid var(--netflix-red-dark)!important;
-  box-shadow:0 8px 25px rgba(0,0,0,.6)!important;
+  background:rgba(20,20,20,.6)!important;
+  backdrop-filter:blur(10px)!important;
+  border:1px solid rgba(229,9,20,.4)!important;
+  border-radius:50px!important;
+  box-shadow:
+    0 8px 32px rgba(0,0,0,.6),
+    inset 0 0 12px rgba(229,9,20,.15)!important;
 }
 #url{
-  background:transparent!important;
-  color:var(--netflix-text)!important;
-  border:none!important;
+  color:#fff!important;
+  font-size:16px!important;
 }
-::placeholder{color:var(--netflix-text-dark)!important;}
+::placeholder{color:#aaa!important;}
 
-/* ---------- 5. 下拉选线路 ---------- */
+/* ---------- 4. 下拉线路 ---------- */
 #jk{
   background:#000!important;
-  color:var(--netflix-text)!important;
+  color:#fff!important;
   border:1px solid var(--netflix-red-dark)!important;
+  border-radius:20px!important;
 }
 
-/* ---------- 6. 按钮 ---------- */
+/* ---------- 5. 解析按钮：悬浮亮红 ---------- */
 .btn-play,
 .play-btn{
-  background:linear-gradient(45deg,var(--netflix-red),var(--netflix-red-dark))!important;
+  background:linear-gradient(45deg,#e50914,#b20710)!important;
   border:none!important;
-  color:#fff!important;
+  border-radius:25px!important;
   font-weight:700!important;
+  letter-spacing:1px!important;
   box-shadow:0 5px 20px rgba(229,9,20,.55)!important;
   transition:all .3s ease;
 }
 .btn-play:hover,
 .play-btn:hover{
-  filter:brightness(1.15)!important;
+  filter:brightness(1.2)!important;
+  box-shadow:0 8px 30px rgba(229,9,20,.75)!important;
 }
-.btn-play:active,
-.play-btn:active{transform:scale(.96)!important;}
+.btn-play:active{transform:scale(.96)!important;}
 
-/* ---------- 7. 提示文字 ---------- */
-.tit-gg a{
-  color:var(--netflix-text-dark)!important;
-}
-.tit-gg a:hover{
-  color:var(--netflix-red)!important;
-}
+/* ---------- 6. 提示文字 ---------- */
+.tit-gg a{color:#aaa!important;font-size:13px!important;}
+.tit-gg a:hover{color:#e50914!important;}
 
-/* ---------- 8. 内容卡片 ---------- */
-.logo-box,
-.container-fluid.logo-box{
-  background:var(--netflix-bg)!important;
-}
-.title-tit h4{
-  color:var(--netflix-text)!important;
-  border-left:4px solid var(--netflix-red)!important;
-  padding-left:8px!important;
-}
-.title-tit ul li{
-  color:var(--netflix-text-dark)!important;
-}
-
-/* ---------- 9. 支持网站 logo 背景 ---------- */
-.logo-lie{
-  background:#000!important;
-  border-radius:4px!important;
-  padding:6px!important;
-  transition:transform .3s ease,box-shadow .3s ease;
-}
-.logo-lie:hover{
-  transform:scale(1.05)!important;
-  box-shadow:0 0 15px rgba(229,9,20,.5)!important;
-}
-
-/* ---------- 10. 评论区 ---------- */
-.cy-box{
-  background:var(--netflix-bg-light)!important;
-  padding:15px 0!important;
-}
-
-/* ---------- 11. 滚动条美化（Chrome） ---------- */
-::-webkit-scrollbar{width:8px;height:8px}
+/* ---------- 7. 滚动条 ---------- */
+::-webkit-scrollbar{width:8px}
 ::-webkit-scrollbar-track{background:#000}
-::-webkit-scrollbar-thumb{background:var(--netflix-red);border-radius:4px}
-::-webkit-scrollbar-thumb:hover{background:var(--netflix-red-dark)}
+::-webkit-scrollbar-thumb{background:#e50914;border-radius:4px}
 </style>
+
 <!-- ✅ 强制“现已支持网站”白色背景 -->
 <style>
 /* 只动颜色，不动布局 */
