--- a/index.html
+++ b/index.html
@@ -384,6 +384,30 @@ function play() {
     document.getElementById('palybox').src = jk + encodeURIComponent(url);
 }
 </script>
+<!-- ✅ 打赏作者 - 右上角悬浮 -->
+<div id="reward" style="position:fixed;top:15px;right:15px;z-index:9999;text-align:center;">
+  <!-- 文字按钮 -->
+  <div id="rewardBtn" style="background:linear-gradient(45deg,#e50914,#b20710);color:#fff;padding:6px 12px;border-radius:20px;font-size:13px;cursor:pointer;box-shadow:0 2px 8px rgba(0,0,0,.4);">打赏作者</div>
+  <!-- 二维码面板（默认隐藏） -->
+  <div id="rewardPanel" style="display:none;margin-top:8px;background:rgba(0,0,0,.85);border-radius:8px;padding:10px;">
+    <div style="color:#fff;font-size:12px;margin-bottom:8px;">扫码支持</div>
+    <div style="display:flex;gap:10px;">
+      <div>
+        <img src="img/wx-qrcode.png" width="90" height="90" alt="加微信">
+        <div style="color:#fff;font-size:11px;margin-top:4px;">加微信</div>
+      </div>
+      <div>
+        <img src="img/pay-qrcode.png" width="90" height="90" alt="付款码">
+        <div style="color:#fff;font-size:11px;margin-top:4px;">付款码</div>
+      </div>
+    </div>
+  </div>
+</div>
 
+<script>
+  const btn  = document.getElementById('rewardBtn');
+  const panel= document.getElementById('rewardPanel');
+  btn.onclick = () => panel.style.display = panel.style.display === 'block' ? 'none' : 'block';
+</script>
 </body>
 </html>
