Change payment code label from '付款码' to '收款码'

--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@ function play() {
         <div style="color:#fff;font-size:11px;margin-top:4px;">加微信</div>
       </div>
       <div>
-        <img src="img/pay-qrcode.png" width="90" height="90" alt="付款码">
-        <div style="color:#fff;font-size:11px;margin-top:4px;">付款码</div>
+        <img src="img/pay-qrcode.png" width="90" height="90" alt="收款码">
+        <div style="color:#fff;font-size:11px;margin-top:4px;">收款码</div>
       </div>
     </div>
   </div>
